--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -14,39 +14,7 @@
 </div>
 
 <div class="messages">
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        Ayumu
-      </div>
-      <div class="message-data">
-        2020/8/19(Wed) 20:00
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        よろしく
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        Kenta
-      </div>
-      <div class="message-data">
-        2020/8/19(Wed) 20:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        こちらこそよろしく
-      </div>
-    </div>
-  </div>
-
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
